# FullStack_TextingApp

./: .gitignore  Makefile  README.md  heroku.yml  myapp
backend/include/: Client.hpp  Server.hpp
backend/server/: Server.cpp
backend/src/: main.cpp
client/: Client.cpp
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: LogIn.tsx  MessageInputBar.tsx  Messages.tsx  TextBox.tsx  UserSelector.tsx
server/: CMakeLists.txt  Dockerfile  README.md  Server.cpp
server/include/: User.hpp
server/src/: Server.cpp
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: LogIn.tsx  LogOff.tsx  MessageInputBar.tsx  Messages.tsx  SendButton.tsx  TextBox.tsx  UserSelector.tsx
